# DetectAndRecognizeBraille

./: CMakeLists.txt  ma_kytu.txt  readme.txt
codegen/lib/Recog_Braille/: Recog_Braille.h  Recog_Braille_initialize.cpp  Recog_Braille_initialize.h  Recog_Braille_rtw.bat  Recog_Braille_rtw.mk  Recog_Braille_rtw.rsp  Recog_Braille_terminate.cpp  Recog_Braille_terminate.h  Recog_Braille_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  repmat.cpp  repmat.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
codegen/lib/Recog_Braille/examples/: main.cpp  main.h
codegen/lib/Recog_Braille/interface/: _coder_Recog_Braille_api.c  _coder_Recog_Braille_api.h  _coder_Recog_Braille_info.c  _coder_Recog_Braille_info.h  (+2 more)
codegen/mex/Recog_Braille/: Recog_Braille_mex.mexw64
include/: Braille.hpp  DetectAndRegconize.h  repmat.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  tiengviet.h  tiengviet_initialize.h  tiengviet_terminate.h  tiengviet_types.h
matlab/: abc.m  bangkihieu.txt  buildInfo.mat  convertGray_resize.m  create_input.m  input_test.m  net0065.mat  net0067.mat  net0068.mat  net2.mat  net_final.mat  neural.m  nntest.m  result.mat  target.mat  tiengviet.prj  untitled.m
matlab/test5 (copy)/: rename.py
matlab/tool/: rename.py
results/: results.txt
src/: DetectAndRegconize.cpp  DetectAndRegconize1.cpp  DetectAndRegconize_Final.cpp  DetectAndRegconize_main.cpp  data_augment.cpp  repmat.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  tiengviet_initialize.cpp  tiengviet_terminate.cpp
(+155 files in other folders)
